--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -15,6 +15,8 @@
 	--bright-color: #{$bright};
 	--shade-color: #{$shade};
 	--tint-color: #{$tint};
+
+	--primary-transparent-color: #{$primary-transparent};
 }
 
 html {
@@ -44,4 +46,31 @@ li {
 .container {
 	max-width: 1320px;
 	margin: 0 auto;
+}
+
+.page-link {
+	position: fixed;
+	top: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	opacity: 0.5;
+	background-color: var(--muted-color);
+	color: var(--bright-color);
+	transition: opacity 0.3s ease-out;
+
+	&--next {
+		right: 30px;
+	}
+
+	&--prev {
+		left: 30px;
+	}
+
+	&:hover {
+		opacity: 1;
+	}
 }
