--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -1,14 +1,22 @@
 .form {
-	&__inputs {
-		display: grid;
-		grid-template-columns: repeat(3, 360px);
-		gap: 48px 80px;
-	}
+    &__inputs {
+        display: grid;
+        grid-template-columns: repeat(3, 360px);
+        gap: 48px 80px;
+    }
 
-	&__field {
-		&:nth-child(2),
-		&:nth-child(4) {
-			grid-column: 2 / 4;
-		}
-	}
+    &__field {
+        &:nth-of-type(2),
+        &:nth-of-type(4) {
+            grid-column: 2 / 4;
+            max-width: 360px;
+        }
+    }
+
+    &__select {
+        &:nth-of-type(9) {
+            grid-column: 2 / 4;
+            max-width: 360px;
+        }
+    }
 }
