--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -53,6 +53,7 @@
     }
 
     &__label {
+        width: fit-content;
         color: var(--secondary-color);
         font-size: 1.6rem;
         font-weight: 500;
