--- a/src/scss/components/_checkbox.scss
+++ b/src/scss/components/_checkbox.scss
@@ -67,7 +67,7 @@
             height: 28px;
             border: 1px solid var(--shade-color);
             border-radius: 4px;
-            box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
+            box-shadow: 0px 4px 8px var(--shadow-color);
             background-color: var(--bright-color);
         }
 
