--- a/src/scss/components/_radio.scss
+++ b/src/scss/components/_radio.scss
@@ -53,7 +53,7 @@
             height: 24px;
             border: 1px solid var(--shade-color);
             border-radius: 50%;
-            box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
+            box-shadow: 0px 4px 8px var(--shadow-color);
             background-color: var(--bright-color);
         }
 
@@ -67,7 +67,7 @@
             width: 12px;
             height: 12px;
             border-radius: 50%;
-            box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
+            box-shadow: 0px 4px 8px var(--shadow-color);
             background-color: var(--accent-color);
         }
     }
