--- a/src/scss/components/_text-field.scss
+++ b/src/scss/components/_text-field.scss
@@ -29,7 +29,7 @@
         background: var(--bright-color);
         border: 1px solid var(--shade-color);
         border-radius: 6px;
-        box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.04);
+        box-shadow: 0px 4px 8px var(--shadow-color);
         color: var(--primary-color);
         font-size: 1.6rem;
 
