--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -18,6 +18,7 @@
 
 	--primary-transparent-color: #{$primary-transparent};
 	--shadow-color: #{$shadow};
+	--bright-shadow-color: #{$bright-shadow};
 }
 
 html {
