--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -12,3 +12,4 @@ $tint: #ebf4f8;
 $primary-transparent: rgba(44, 39, 56, 0.24);
 
 $shadow: rgba(44, 39, 56, 0.08);
+$bright-shadow: rgba(255, 255, 255, 0.15);
