--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -56,13 +56,22 @@
         gap: 40px 50px;
     }
 
-    &__sliders {
+    &__sliders,
+    &__labels {
         display: flex;
     }
 
     &__slider-item {
         width: 350px;
         margin-right: 65px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+
+    &__label-item {
+        margin-right: 20px;
 
         &:last-child {
             margin-right: 0;
