--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -35,7 +35,7 @@
         margin-top: 80px;
     }
 
-    &__pagination-item {
+    &__stepper-item {
         margin-right: 40px;
 
         &:last-child {
