--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -4,7 +4,7 @@
 @import "./icon";
 @import "./text-field";
 @import "./select";
-@import "./pagination";
+@import "./stepper";
 @import "./checkbox";
 @import "./radio";
 @import "./toggle";
