slider & label hover & focus styles fix

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -19,6 +19,7 @@
 	--primary-transparent-color: #{$primary-transparent};
 	--shadow-color: #{$shadow};
 	--bright-shadow-color: #{$bright-shadow};
+	--muted-shadow-color: #{$muted-shadow};
 }
 
 html {
