--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -13,3 +13,4 @@ $primary-transparent: rgba(44, 39, 56, 0.24);
 
 $shadow: rgba(44, 39, 56, 0.08);
 $bright-shadow: rgba(255, 255, 255, 0.15);
+$muted-shadow: rgba(124, 156, 191, 0.4);
