--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -22,6 +22,14 @@
             }
         }
 
+        &:focus-visible {
+            outline: none;
+
+            &::-webkit-slider-thumb {
+                box-shadow: 0 0 0 6px var(--muted-shadow-color);
+            }
+        }
+
         &::-webkit-slider-thumb {
             appearance: none;
             position: relative;
@@ -33,6 +41,15 @@
             box-shadow: 0px 4px 8px var(--slider-shadow);
             background-color: var(--bright-color);
             cursor: pointer;
+            transition: box-shadow 0.1s ease-in;
+
+            &:hover {
+                box-shadow: 0 0 0 6px var(--muted-shadow-color);
+            }
+
+            &:active {
+                box-shadow: 0 0 0 12px var(--muted-shadow-color);
+            }
         }
     }
 
