--- a/src/scss/components/_radio.scss
+++ b/src/scss/components/_radio.scss
@@ -7,6 +7,12 @@
         position: absolute;
         appearance: none;
 
+        &:focus-visible + .radio__label {
+            &::before {
+                outline: 2px solid var(--primary-color);
+            }
+        }
+
         &:checked + .radio__label {
             &::before {
                 border-width: 2px;
