--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -8,8 +8,11 @@ $muted: #7c9cbf;
 $bright: #ffffff;
 $shade: #dbe2ea;
 $tint: #ebf4f8;
+$blueberry: #6f96ff;
+$strawberry: #ff5689;
 
 $primary-transparent: rgba(44, 39, 56, 0.24);
+$bright-transparent: rgba(255, 255, 255, 0.86);
 
 $shadow: rgba(44, 39, 56, 0.08);
 $bright-shadow: rgba(255, 255, 255, 0.15);
