--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,38 +1,41 @@
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 :root {
-	--accent-color: #{$accent};
-	--warning-color: #{$warning};
-	--success-color: #{$success};
-	--error-color: #{$error};
-	--primary-color: #{$primary};
-	--secondary-color: #{$secondary};
-	--muted-color: #{$muted};
-	--bright-color: #{$bright};
-	--shade-color: #{$shade};
-	--tint-color: #{$tint};
+    --accent-color: #{$accent};
+    --warning-color: #{$warning};
+    --success-color: #{$success};
+    --error-color: #{$error};
+    --primary-color: #{$primary};
+    --secondary-color: #{$secondary};
+    --muted-color: #{$muted};
+    --bright-color: #{$bright};
+    --shade-color: #{$shade};
+    --tint-color: #{$tint};
+    --blueberry-color: #{$blueberry};
+    --strawberry-color: #{$strawberry};
 
-	--primary-transparent-color: #{$primary-transparent};
-	--shadow-color: #{$shadow};
-	--bright-shadow-color: #{$bright-shadow};
-	--muted-shadow-color: #{$muted-shadow};
+    --primary-transparent-color: #{$primary-transparent};
+    --bright-transparent-color: #{$bright-transparent};
+    --shadow-color: #{$shadow};
+    --bright-shadow-color: #{$bright-shadow};
+    --muted-shadow-color: #{$muted-shadow};
 }
 
 html {
-	font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-	margin: 0;
-	padding: 60px;
-	background-color: var(--tint-color);
-	color: var(--primary-color);
-	font-family: "IBM Plex Sans", sans-serif;
-	font-weight: 400;
+    margin: 0;
+    padding: 60px;
+    background-color: var(--tint-color);
+    color: var(--primary-color);
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 400;
 }
 
 h1,
@@ -42,38 +45,38 @@ h4,
 p,
 ul,
 li {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
-	max-width: 1320px;
-	margin: 0 auto;
+    max-width: 1320px;
+    margin: 0 auto;
 }
 
 .page-link {
-	position: fixed;
-	top: 50px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
-	opacity: 0.5;
-	background-color: var(--muted-color);
-	color: var(--bright-color);
-	transition: opacity 0.3s ease-out;
+    position: fixed;
+    top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    opacity: 0.5;
+    background-color: var(--muted-color);
+    color: var(--bright-color);
+    transition: opacity 0.3s ease-out;
 
-	&--next {
-		right: 30px;
-	}
+    &--next {
+        right: 30px;
+    }
 
-	&--prev {
-		left: 30px;
-	}
+    &--prev {
+        left: 30px;
+    }
 
-	&:hover {
-		opacity: 1;
-	}
+    &:hover {
+        opacity: 1;
+    }
 }
