--- a/src/scss/components/_alert.scss
+++ b/src/scss/components/_alert.scss
@@ -6,7 +6,7 @@
     border-radius: 10px;
     background-color: var(--primary-color);
     color: var(--bright-color);
-    box-shadow: 0px 24px 48px rgba(44, 39, 56, 0.08);
+    box-shadow: 0px 24px 48px var(--shadow-color);
 
     &--bright {
         background-color: transparent;
