--- a/src/scss/components/_alert.scss
+++ b/src/scss/components/_alert.scss
@@ -4,7 +4,8 @@
     justify-content: space-between;
     padding: 20px 25px;
     border-radius: 10px;
-    background-color: var(--primary-color);
+    background-color: var(--accent-color);
+
     color: var(--bright-color);
     box-shadow: 0px 24px 48px var(--shadow-color);
 
@@ -30,8 +31,8 @@
         }
     }
 
-    &--accent {
-        background-color: var(--accent-color);
+    &--dark {
+        background-color: var(--primary-color);
     }
 
     &--warning {
