--- a/src/scss/mixins/_block-arrows.scss
+++ b/src/scss/mixins/_block-arrows.scss
@@ -1,31 +1,31 @@
-@mixin arrow-top($arrow-width) {
-    border-width: $arrow-width;
-    border-style: solid;
+@mixin arrow-top($arrow-width, $arrow-color) {
+    border: $arrow-width solid;
+    border-color: transparent transparent $arrow-color transparent;
     top: 0;
     left: 50%;
     transform: translate(-50%, -100%);
 }
 
-@mixin arrow-right($arrow-width) {
-    border-width: $arrow-width;
-    border-style: solid;
+@mixin arrow-right($arrow-width, $arrow-color) {
+    border: $arrow-width solid;
+    border-color: transparent transparent transparent $arrow-color;
     top: 50%;
     left: 100%;
-    transform: rotate(90deg) translate(-50%, 0);
+    transform: translate(0, -50%);
 }
 
-@mixin arrow-bottom($arrow-width) {
-    border-width: $arrow-width;
-    border-style: solid;
+@mixin arrow-bottom($arrow-width, $arrow-color) {
+    border: $arrow-width solid;
+    border-color: $arrow-color transparent transparent transparent;
     top: 100%;
     left: 50%;
-    transform: rotate(180deg) translate(50%, 0);
+    transform: translate(-50%, 0);
 }
 
-@mixin arrow-left($arrow-width) {
-    border-width: $arrow-width;
-    border-style: solid;
+@mixin arrow-left($arrow-width, $arrow-color) {
+    border: $arrow-width solid;
+    border-color: transparent $arrow-color transparent transparent;
     top: 50%;
     left: 0;
-    transform: rotate(-90deg) translate(50%, -100%);
+    transform: translate(-100%, -50%);
 }
