--- a/src/scss/components/_rating.scss
+++ b/src/scss/components/_rating.scss
@@ -1,56 +1,75 @@
 .rating {
-	&__top {
-		display: flex;
-		align-items: center;
-	}
+    &__top {
+        display: flex;
+        align-items: center;
+    }
 
-	&__stars {
-		display: flex;
-		flex-direction: row-reverse;
-		margin-right: 7px;
-	}
+    &__stars {
+        display: flex;
+        flex-direction: row-reverse;
+        margin-right: 7px;
 
-	&__star-item {
-		padding: 0 1px;
-		border: none;
-		background-color: transparent;
-		cursor: pointer;
+        &:hover,
+        &:focus-within {
+            .rating__star-icon {
+                fill: #a3bad4;
+            }
+        }
+    }
 
-		&:hover,
-		&:focus-visible {
-			outline: none;
+    &__star-item {
+        display: inline-flex;
+        align-items: center;
+        padding: 0 2px;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
 
-			&,
-			& ~ .rating__star-item {
-				.rating__star-icon {
-					fill: #ffbe1e;
-				}
-			}
-		}
+        &:hover,
+        &:focus-visible {
+            outline: none;
+            transform: scale(1.22);
 
-		&--active {
-			.rating__star-icon {
-				fill: #ffa200;
-			}
-		}
-	}
+            &,
+            & ~ .rating__star-item {
+                .rating__star-icon {
+                    fill: #ffbe1e;
+                }
+            }
+        }
 
-	&__star-icon {
-		width: 20px;
-		height: 20px;
-		fill: #a3bad4;
-		transition: fill 0.12s ease-in;
-	}
+        &--half {
+            .rating__star-icon--left {
+                fill: #ffa200;
+            }
 
-	&__value {
-		color: var(--primary-color);
-		font-size: 1.6rem;
-		font-weight: 600;
-	}
+            .rating__star-icon--right {
+                fill: #a3bad4;
+            }
+        }
 
-	&__bottom {
-		margin-top: 7px;
-		color: var(--secondary-color);
-		font-size: 1.4rem;
-	}
+        &--full {
+            .rating__star-icon {
+                fill: #ffa200;
+            }
+        }
+    }
+
+    &__star-icon {
+        width: 10px;
+        height: 20px;
+        fill: #a3bad4;
+    }
+
+    &__value {
+        color: var(--primary-color);
+        font-size: 1.6rem;
+        font-weight: 600;
+    }
+
+    &__bottom {
+        margin-top: 7px;
+        color: var(--secondary-color);
+        font-size: 1.4rem;
+    }
 }
