modal, icon-button, alerts & labels refactoring

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -9,6 +9,7 @@
 @import "./radio";
 @import "./toggle";
 @import "./slider";
+@import "./icon-button";
 @import "./label";
 @import "./button";
 @import "./alert";
@@ -24,3 +25,4 @@
 @import "./typography";
 @import "./header";
 @import "./flap";
+@import "./modal";
