--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -38,6 +38,10 @@
         padding: 18px 0;
     }
 
+    &--full-width {
+        width: 100%;
+    }
+
     &--contained {
         border-color: var(--accent-color);
         background-color: var(--accent-color);
