paper refactoring, sections classes renamed

--- a/src/scss/blocks/_avatars-section.scss
+++ b/src/scss/blocks/_avatars-section.scss
@@ -1,10 +1,12 @@
-.modals {
+.avatars-section {
     &__wrapper {
         display: flex;
+        align-items: center;
+        padding-top: 40px;
     }
 
     &__item {
-        margin-right: 60px;
+        margin-right: 30px;
 
         &:last-child {
             margin-right: 0;
