--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -1,16 +1,16 @@
-@import "./typeface";
-@import "./colors";
-@import "./icons";
-@import "./form";
-@import "./logos";
-@import "./avatars";
-@import "./messages";
-@import "./popovers";
-@import "./tooltips";
-@import "./list-rating";
-@import "./type-scale";
-@import "./flaps";
-@import "./modals";
-@import "./callouts";
-@import "./cards";
-@import "./forms";
+@import "./typeface-section";
+@import "./colors-section";
+@import "./icons-section";
+@import "./form-section";
+@import "./logos-section";
+@import "./avatars-section";
+@import "./messages-section";
+@import "./popovers-section";
+@import "./tooltips-section";
+@import "./list-rating-section";
+@import "./type-scale-section";
+@import "./flaps-section";
+@import "./modals-section";
+@import "./callouts-section";
+@import "./cards-section";
+@import "./forms-section";
