--- a/src/scss/blocks/_modals-section.scss
+++ b/src/scss/blocks/_modals-section.scss
@@ -1,12 +1,10 @@
-.avatars {
+.modals-section {
     &__wrapper {
         display: flex;
-        align-items: center;
-        padding-top: 40px;
     }
 
     &__item {
-        margin-right: 30px;
+        margin-right: 60px;
 
         &:last-child {
             margin-right: 0;
