--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -10,8 +10,8 @@
         text-decoration: none;
     }
 
-    &__logo {
-        margin-right: 60px;
+    &__menu {
+        margin-left: 60px;
     }
 
     &__menu-link {
