chartjs, bar & line chart examples

--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -12,5 +12,6 @@
 @import "./flaps-section";
 @import "./modals-section";
 @import "./callouts-section";
+@import "./charts-section";
 @import "./cards-section";
 @import "./forms-section";
