--- a/src/scss/blocks/_icons-section.scss
+++ b/src/scss/blocks/_icons-section.scss
@@ -4,6 +4,7 @@
         grid-template-columns: repeat(auto-fill, 30px);
         grid-auto-rows: 30px;
         gap: 24px;
+        justify-content: center;
         margin-bottom: 40px;
         padding: 30px 24px;
         border-radius: 20px;
