--- a/src/scss/blocks/_colors-section.scss
+++ b/src/scss/blocks/_colors-section.scss
@@ -4,6 +4,12 @@
         grid-template-columns: repeat(auto-fill, 300px);
         grid-auto-rows: 300px;
         gap: 40px;
+        justify-content: center;
+
+        @media screen and (max-width: $sm) {
+            grid-template-columns: repeat(auto-fill, 260px);
+            grid-auto-rows: 260px;
+        }
     }
 
     &__paper {
